    <https://github.com/jhy/jsoup/issues/1802>

  * Improvement: in Element#forEach and Node#forEachNode, use java.util.function.Consumer instead of the previous
    Android compatibility shim org.jsoup.helper.Consumer. Subsequently, the latter has been deprecated.
    <https://github.com/jhy/jsoup/pull/1870>
    
  * Bugfix: URLs containing characters such as [ and ] were not escaped correctly, and would throw a
    MalformedURLException when fetched.
    <https://github.com/jhy/jsoup/issues/1873>

  * Bugfix: Element.cssSelector would create invalid selectors for elements where the tag name, ID, or classnames needed
    to be escaped (e.g. if a class name contained a ':' or '.').
    <https://github.com/jhy/jsoup/issues/1742>

  * Bugfix: element.text() should have a space between a block and an inline element.
    <https://github.com/jhy/jsoup/issues/1877>

  * Bugfix: if a Node or an Element was replaced with itself, that node would incorrectly be orphaned.
    <https://github.com/jhy/jsoup/issues/1843>

  * Bugfix: form data on a previous request was copied to a new request in newRequest(), resulting in an accumulation of
    form data when executing multi-step form submissions, or data sent to later requests incorrectly. Now, newRequest()
    only copies session related settings (cookies, proxy settings, user-agent, etc) but not the request data nor the
    body.
    <https://github.com/jhy/jsoup/issues/1778>

Release 1.15.3 [2022-Aug-24]
  * Security: fixed an issue where the jsoup cleaner may incorrectly sanitize crafted XSS attempts if
    SafeList.preserveRelativeLinks is enabled.
    <https://github.com/jhy/jsoup/security/advisories/GHSA-gp7f-rwcx-9369>

  * Improvement: the Cleaner will preserve the source position of cleaned elements, if source tracking is enabled in the
    original parse.

  * Improvement: the error messages output from Validate are more descriptive. Exceptions are now ValidationExceptions