@@ -17,6 +17,9 @@ Release 1.15.4 [PENDING]
   * Improvement: in Element#forEach and Node#forEachNode, use java.util.function.Consumer instead of the previous
     Android compatibility shim org.jsoup.helper.Consumer. Subsequently, the latter has been deprecated.
     <https://github.com/jhy/jsoup/pull/1870>
+
+  * Improvement: added a new method Document#forms(), to conveniently retrieve a List<FormElement> containing the <form>
+    elements in a document.
     
   * Bugfix: URLs containing characters such as [ and ] were not escaped correctly, and would throw a
     MalformedURLException when fetched.
